Fixed padding on small article

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,5 +174,5 @@ color: black;
 
  .list p{
    border-bottom: 1px solid black;
-   padding: 5px;
+   padding: 10px 0px;
  }
